<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/merchant_server_data">

        <EditTextPreference
            app:key="profile_id"
            app:title="@string/profile_id"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="server_key"
            app:title="@string/server_key"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="client_key"
            app:title="@string/client_key"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="country_code"
            app:title="@string/country_code"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="currency_code"
            app:title="@string/currency_code"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>